updated image path

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing=20>
     <td>
-      <img src="/Users/sakshi/Desktop/images/1.png" alt="sakshi" width=200 height=200>
+      <img src="images/1.png" alt="sakshi" width=200 height=200>
       <p>
     </td>
     <td>
