updated image path

--- a/books.html
+++ b/books.html
@@ -23,7 +23,7 @@
           <b>📚It Ends With Us</b>
         </td>
 
-        <td>  <img src="/Users/sakshi/Desktop/images/2.png" alt="sakshi" width=200 height=200></td>
+        <td>  <img src="images/2.png" alt="sakshi" width=200 height=200></td>
         <td>
           Collen Hoover
         </td>
@@ -33,7 +33,7 @@
           <b>📚The Love Hypothesis</b>
         </td>
 
-        <td><img src="/Users/sakshi/Desktop/images/3.png" alt="sakshi" width=200 height=200 /></td>
+        <td><img src="images/3.png" alt="sakshi" width=200 height=200 /></td>
         <td>
         Collen Hoover
         </td>
@@ -41,26 +41,26 @@
       <tr>
         <td><b>📚Spanish Love deception</b></td>
 
-        <td><img src="/Users/sakshi/Desktop/images/4.png" alt="sakshi" width=200 height=200  ></td>
+        <td><img src="images/4.png" alt="sakshi" width=200 height=200  ></td>
 <td>Elena Armas</td>
       </tr>
 
       <tr>
         <td><b>📚Verity</b></td>
 
-        <td><img src="/Users/sakshi/Desktop/images/5.png" alt="sakshi" width=200 height=200 /></td>
+        <td><img src="images/5.png" alt="sakshi" width=200 height=200 /></td>
 <td>Collen Hoover</td>
       </tr>
       <tr>
         <td><b>📚Ugly Love</b></td>
 
-        <td><img src="/Users/sakshi/Desktop/images/6.png" alt="sakshi" width=200 height=200></td>
+        <td><img src="images/6.png" alt="sakshi" width=200 height=200></td>
 <td>Collen Hoover</td>
       </tr>
       <tr>
         <td><b>📚The upside of Falling</b></td>
 
-        <td><img src="/Users/sakshi/Desktop/images/7.png" alt="sakshi" width=200 height=200 /></td>
+        <td><img src="images/7.png" alt="sakshi" width=200 height=200 /></td>
 <td>Alex Light</td>
       </tr>
       <tr>
