--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h2>Introduction</h2>
   <ul>
     <li>pursuing BE</li>
-    <li><em>Student at <em /><a href="https://www.rnsit.ac.in" target="-blank"><em>RNSIT</em></a></li>
+    <li><em>Student at <em /><a href="https://www.rnsit.ac.in"><em>RNSIT</em></a></li>
     <li>department of <b>Computer Science and Engineering(CSE)</b></li>
     <li>2020-2024 batch</li>
   </ul>
@@ -41,7 +41,7 @@
   </ul>
   <hr />
   <p>Here are some of the books that i have read. you should try them too!!</p>
-  <a href="/Users/sakshi/Desktop/webdev/htmlpersonelsite/books.html" target="_blank">books</a>
+  <a href="/Users/sakshi/Desktop/webdev/htmlpersonelsite/books.html">books</a>
   <hr>
 
   <h2>Anime</h2>
